--- a/about/css.css
+++ b/about/css.css
@@ -14,9 +14,10 @@ body {
   border-radius: 10px;
   font-family: "Courier New", Courier, monospace;
 }
-a { color: inherit; 
-    text-decoration: none;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 .nav {
-    text-align: center;
+  text-align: center;
 }
