--- a/css.css
+++ b/css.css
@@ -1,33 +1,34 @@
 body {
-    background: url(https://i.ytimg.com/vi/fwYmnlXHTOg/maxresdefault.jpg) no-repeat center fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background: url(https://i.ytimg.com/vi/fwYmnlXHTOg/maxresdefault.jpg)
+    no-repeat center fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-a { color: inherit; 
-    text-decoration: none;
-} 
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
 .borderh {
-    border-bottom: 10px;
-    border-radius: 10px;
+  border-bottom: 10px;
+  border-radius: 10px;
 }
 .nav {
-    text-align: center;
-    
+  text-align: center;
 }
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    margin-top: 100px;
-  }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  margin-top: 100px;
+}
 
 .mono {
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
-    font-size: large;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  font-size: large;
 }
 .jerh {
-    margin-top: 29%;
+  margin-top: 29%;
 }
