--- a/quiz/css.css
+++ b/quiz/css.css
@@ -6,18 +6,18 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  color:aliceblue
+  color: aliceblue;
 }
 .nav {
   text-align: center;
 }
 .quizes {
-    background-color: rgba(255, 255, 255, 0.5);
-    margin-left: 30px;
-    width: 600px;
-    text-align: center;
-    margin: auto;
-    border-style: double;
-    border-radius: 10px;
-    font-family: "Courier New", Courier, monospace;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-left: 30px;
+  width: 600px;
+  text-align: center;
+  margin: auto;
+  border-style: double;
+  border-radius: 10px;
+  font-family: "Courier New", Courier, monospace;
 }
